# stm32-home-sensor

./: Cargo.toml  Makefile.toml  README.md  openocd.cfg  openocd.gdb
.cargo/: config
src/: main.rs
