[package]
edition = "2018"
readme = "README.md"
name = "home-sensor"
version = "0.1.0"
rust-version = "1.62"

[dependencies]
cortex-m = "0.7.6"
cortex-m-rt = "0.7.1"
cortex-m-semihosting = "0.5.0"
panic-semihosting = "0.6.0"
hd44780-driver = "0.4.0"
scd30 = { git = "https://github.com/sinewave-ee/scd30-rs", branch = "master" }
stackfmt = "0.1.2"

[dependencies.stm32f1xx-hal]
version = "0.9.0"
features = ["stm32f103", "rt", "stm32-usbd"]

[dependencies.shared-bus]
features = ["cortex-m"]
optional = false
version = "0.2.4"

# this lets you use `cargo fix`!
[[bin]]
name = "home-sensor"
test = false
bench = false

[profile.dev]
incremental = false
codegen-units = 1

[profile.release]
codegen-units = 1
debug = false
lto = true
opt-level = 'z' # turn on maximum optimizations
